uncommented all playground html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <body>
         <div bind-component="App">
-            <!-- <div bind-text="testProperty"></div>
+            <div bind-text="testProperty"></div>
             <span bind-text="testProperty"></span>
             <div>
                 <div bind-text="testProperty"></div>
@@ -34,10 +34,10 @@
             <input type="text" bind-value="testProperty" />
             <button bind-event="click:testClick">Change value</button> -->
 
-            <!-- <div bind-for="testArray;item;track">
+            <div bind-for="testArray;item;track">
                 <div bind="item.value" bind-event="click:testClick" bind-class="green-item:greenStyledItem"></div>
                 <div bind="item.testProp" bind-event="click:testClick" bind-class="blue-item:blueStyledItem"></div>
-            </div> -->
+            </div>
             <div bind-for="testArray;item;track">
                 <div>
                     <div>
@@ -45,12 +45,12 @@
                     </div>
                 </div>
             </div>
-            <!-- <div bind-class="hover-class1:testHover,hover-class2:!testHover">
+            <div bind-class="hover-class1:testHover,hover-class2:!testHover">
                 I am hovered
             </div>
             <button bind-event="mouseover:onMouseOver,mouseleave:onMouseLeft">
                 Hover me
-            </button> -->
+            </button>
         </div>
         <script src="dist/shark.js"></script>
         <script>
