--- a/index.html
+++ b/index.html
@@ -8,39 +8,35 @@
     <body>
         <div bind-component="App">
             <div bind-text="testProperty"></div>
-            <!-- <span bind-text="testProperty"></span>
+            <span bind-text="testProperty"></span>
             <div>
                 <div bind-text="testProperty"></div>
-            </div> -->
-
-            
+            </div>
             <input type="text" bind-value="testProperty" bind-event="keydown:onValueChanged" />  
             <button bind-event="click:testClick">Change value</button>
-
-            <!-- <div bind-for="testArray;item;track">
+            <div bind-for="testArray;item;track">
                 <div bind="item.value" bind-event="click:testClick" bind-class="green-item:greenStyledItem"></div>
                 <div bind="item.testProp" bind-event="click:testClick" bind-class="blue-item:blueStyledItem"></div>
-            </div> -->
-
-            <!-- <div bind-for="testArray;item;track">
+            </div>
+            <div bind-for="testArray;item;track">
                 <div>
                     <div>
                         <div bind-class="green-item:greenStyledItem" bind="item.value" bind-event="click:testClick"></div>
                     </div>
                 </div>
-            </div> -->
-            <!-- <div bind-class="hover-class1:testHover,hover-class2:!testHover">
+            </div>
+            <div bind-class="hover-class1:testHover,hover-class2:!testHover">
                 I am hovered
             </div>
             <button bind-event="mouseover:onMouseOver,mouseleave:onMouseLeft">
                 Hover me
-            </button> -->
+            </button>
         </div>
-        <!-- <div bind-component="DashboardComponent">
+        <div bind-component="DashboardComponent">
             <div>Dashboard</div>
             <div bind-text="myProperty1"></div>
             <button bind-event="click:getData">get data</button>
-        </div> -->
+        </div>
     </body>
     <script src="dist/shark.js"></script>
     <script src="app/data/main-data.service.js"></script>
