--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </header>
     <body>
         <div bind-component="App">
-            <div bind-text="testProperty"></div>
+            <!-- <div bind-text="testProperty"></div>
             <input type="text" bind-value="testProperty" bind-event="keydown:onValueChanged" />  
             <button bind-event="click:testClick">Change value</button>
             <div bind-for="testArray;item;track">
@@ -25,7 +25,7 @@
             </div>
             <button bind-event="mouseenter:onMouseOver,mouseleave:onMouseLeft">
                 Hover me
-            </button>
+            </button> -->
             <div bind-component="DashboardComponent">
             </div>
         </div>
