--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Test playground</title>
     </header>
     <body>
-        <div bind-component="AppComponent">
+        <div bind-component="AppRootComponent">
         </div>
     </body>
     <script type="module" src="dist/shark.js"></script>
