--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <header>
         <meta charset="utf-8" />
-        <title>Test playground</title>
+        <title>.:: SharkJS ::.</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
     </header>
     <body>
         <div bind-component="AppRootComponent">
