FIrebase deploy setup.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
         <div bind-component="AppRootComponent">
         </div>
     </body>
-    <script type="module" src="dist/shark.js"></script>
+    <script src="dist/shark.js"></script>
 </html>
