--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <meta charset="utf-8" />
-        <title>.:: SharkJS ::.</title>
+        <title>Shark</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
     </header>
     <body>
