--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <header>
         <meta charset="utf-8" />
+        <meta property="og:image" content="https://shark-js.web.app/shark-js-logo.png" />
+        <meta property="og:type" content="Shark JS WEB Client Framework" />
+        <meta property="og:url" content="https://shark-js.web.app/" />
+        <meta property="og:title" content="Shark UI framework" />
+        <meta property="og:description" content="Simple JS framework for WEB development." />
+
         <title>Shark</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
     </header>
