--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <header>
         <meta charset="utf-8" />
-        <meta property="og:image" content="https://shark-js.web.app/shark-js-logo.png" />
         <meta property="og:url" content="https://shark-js.web.app/" />
+        <meta property="og:secure_url" content="https://shark-js.web.app/" />
+        <meta property="og:image" content="https://shark-js.web.app/shark-js-logo.png" />
+        <meta property="og:image:secure_url" content="https://shark-js.web.app/shark-js-logo.png" />
+        <meta property="og:image:type" content="image/png" />
         <meta property="og:title" content="Shark UI framework" />
         <meta property="og:description" content="Simple JS framework for WEB development." />
 
