--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <meta property="og:image:secure_url" content="https://shark-js.web.app/shark-js-logo.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:title" content="Shark UI framework">
-        <meta property="og:description" content="Simple JS framework for WEB development.">
+        <meta property="og:description" content="Simple JS framework for WEB development...">
         <meta name="author" content="Vladimir Parchev">
+        <meta name="image" property="og:image" content="https://shark-js.web.app/shark-js-logo.png">
+        <meta name="description" property="og:description" content="Simple JS framework for WEB development...">
 
         <title>Shark</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
