--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <meta charset="utf-8" />
-        <meta property="og:url" content="https://shark-js.web.app/">
-        <meta property="og:secure_url" content="https://shark-js.web.app/">
-        <meta property="og:image" content="https://shark-js.web.app/shark-js-logo.png">
-        <meta property="og:image:secure_url" content="https://shark-js.web.app/shark-js-logo.png">
-        <meta property="og:image:type" content="image/png">
-        <meta property="og:title" content="Shark UI framework">
-        <meta property="og:description" content="Simple JS framework for WEB development...">
-        <meta name="author" content="Vladimir Parchev">
-        <meta name="image" property="og:image" content="https://shark-js.web.app/shark-js-logo.png">
-        <meta name="description" property="og:description" content="Simple JS framework for WEB development...">
+        <meta property="og:url" content="https://shark-js.web.app/" />
+        <meta property="og:secure_url" content="https://shark-js.web.app/" />
+        <meta name="image" property="og:image" content="https://shark-js.web.app/shark-js-logo.png" />
+        <meta property="og:image:secure_url" content="https://shark-js.web.app/shark-js-logo.png" />
+        <meta name="image-type" property="og:image:type" content="image/png" />
+        <meta name="title" property="og:title" content="Shark UI framework" />
+        <meta name="description" property="og:description" content="Simple JS framework for WEB development..." />
+        <meta name="author" content="Vladimir Parchev" />
 
         <title>Shark</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
-    </header>
+    </head>
     <body>
         <div bind-component="AppRootComponent">
         </div>
