--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" alt="">
     </head>
     <body>
-        <div bind-component="AppRootComponent">
-        </div>
+        <AppRootComponent />
     </body>
     <script src="dist/shark.js"></script>
 </html>
